--- a/development_behavior_packs/e-vehiclesBP/manifest.json
+++ b/development_behavior_packs/e-vehiclesBP/manifest.json
@@ -12,7 +12,7 @@
             "description": "_",
             "type": "data",
             "uuid": "bc56161e-2cc6-4a8e-a0f2-81ec1c94691b",
-            "version": [1,0,0]
+            "version": [1, 0, 0]
         }
     ]
 }
